--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
-body {
+#app {
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
